Advanced C# course, lessons 1 to 4 in three languages: a "If you know Spring and Reactor" section for each, and the Spring and Reactor column in the plan's parts 1 and 4
Lessons 6 to 9 compared channels, TPL Dataflow and Rx with Reactor; the four
runtime lessons said nothing about the JVM at all. Each now ends with the same
kind of section, before the exercises:

- lesson 1, memory: no user-defined value type on the JVM (Valhalla's value
  objects are a preview targeted at JDK 28), erased generics against reified
  ones, and the ownership of a pooled DataBuffer against a Span that owns
  nothing and is checked by the compiler;
- lesson 2, the collector: generations against G1's regions, the large object
  heap against humongous objects, the pinned object heap against JNI region
  pinning (JEP 423), DATAS against SoftMaxHeapSize, finalizers against Cleaner,
  and MemoryDiagnoser against JMH's -prof gc; HotSpot documents scalar
  replacement where .NET 9 and 10 stack-allocate;
- lesson 3, async: the generated state machine against a chain of operator
  objects assembled once and subscribed per subscriber, ConfigureAwait against
  publishOn and subscribeOn, the two deadlocks, and what virtual threads
  (JEP 444, JEP 491) change;
- lesson 4, measurement: JMH's forks and warmup, -prof gc, C1 and C2 with OSR,
  DoEscapeAnalysis, and the Vector API's twelfth incubation, which waits on
  Valhalla.

Every claim is quoted from a primary source: the Reactor reference guide and
Javadoc, the Reactive Streams rules, Spring's data buffer documentation,
Netty's reference counting page, the JEPs, the JLS, the GC tuning guide and
the JMH repository. Where the documentation states nothing - Reactor publishes
no allocation figure - the page says so instead of guessing.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>